--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,16 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-  
+@tailwind components;
+@tailwind utilities;
+
+/* @layer base {
+  :root {
+    --background: 0 0% 14%;
+    --primary: 83 100% 61%;
+  }
+}
+
+@layer base {
+  body {
+    @apply bg-[hsl(var(--background))] text-white;
+  }
+} */
